--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,29 +2,9 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+- story: ask for course name by courseID
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+    - intent: ask_course_name_by_id
+      entities:
+        - courseID: "XX001"
+    - action: action_get_course_info
