--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,10 +1,7 @@
 version: "3.1"
 
 stories:
-
-- story: ask for course name by courseID
-  steps:
-    - intent: ask_course_name_by_id
-      entities:
-        - courseID: "XX001"
-    - action: action_get_course_info
+  - story: Query Typhoon when no intent is matched
+    steps:
+      - intent: nlu_fallback
+      - action: action_query_typhoon
