--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -8,3 +8,45 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+
+- regex: course_code
+  examples: |
+    - "[ก-ฮ]{1,3}\.[0-9]{3}"
+
+- lookup: course_code
+  examples: |
+    - มธ.100
+    - มธ.102
+    - คพ.245
+    - สษ.295
+    - จ.252
+    - ศ.210
+    - ค.211
+    - คพ.218
+
+- intent: ask_course_name
+  examples: |
+    - วิชานี้คือวิชาอะไรครับ [มธ.100](course_code)
+    - วิชานี้ชื่ออะไร [คพ.245](course_code)
+    - ชื่อเต็มว่าอะไรวิชา [สษ.295](course_code)
+    - อะไรคือชื่อเต็มๆของ [จ.252](course_code)
+    - วิชานี้ [ศ.210](course_code) มีชื่อว่าอะไร
+    - วิชา [ค.211](course_code) มีชื่อวิชาว่าอะไร
+    - อะไรคือชื่อของ [คพ.218](course_code)
+    - ฉันอยากถามเรื่องชื่อ [คพ.218](course_code)
+    - ฉันอยากถามถึงชื่อ [คพ.251](course_code)
+    - ฉันอยากรู้ว่าวิชา [คพ.245](course_code) เป็นชื่อของวิชาอะไรหน่ะ
+    - ขอถามชื่อของ [คพ.403](course_code)
+    - ชื่อของ [คพ.300](course_code)
+
+- intent: chit_chat_professor
+  examples: |
+    - อาจารย์ฐาปนา
+    - ฐาปนา
+    - ใครคือคุณฐาปนา
+    - คุณครูฐาปนา
+    - ศาสตราจารย์ฐาปนา
+    - คุณฐาปนา
+    - นายฐาปนา
+    - อาจารย์ที่ชื่อฐาปนา
+    - เล่าเรื่องอาจารย์ฐาปนา
