--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,7 @@
-# The config recipe.
-# https://rasa.com/docs/rasa/model-configuration/
 recipe: default.v1
 
-# The assistant project unique identifier
 assistant_id: 20240905-083714-quantum-spread
 
-# Configuration for Rasa NLU.
 language: en
 
 pipeline:
@@ -14,29 +10,27 @@ pipeline:
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
   - name: DIETClassifier
-    epochs: 100
+    epochs: 50
     constrain_similarities: true
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 100
+    epochs: 50
     constrain_similarities: true
   - name: FallbackClassifier
-    threshold: 0.3
-    ambiguity_threshold: 0.1
+    threshold: 0.4
+    ambiguity_threshold: 0.2
 
-# Configuration for Rasa Core.
+
 policies:
   - name: MemoizationPolicy
   - name: RulePolicy
+    core_threshold: 0.3
+    nlu_threshold: 0.2
+    fallback_action_name: "utter_default"
   - name: UnexpecTEDIntentPolicy
     max_history: 5
-    epochs: 100
+    epochs: 50
   - name: TEDPolicy
     max_history: 5
-    epochs: 100
+    epochs: 50
     constrain_similarities: true
-  - name: RulePolicy
-    nlu_threshold: 0.3  # Adjust this threshold as needed for NLU fallback
-    core_threshold: 0.3  # Adjust this threshold as needed for Core fallback
-    fallback_action_name: "action_query_typhoon"  # Custom action to call Typhoon in case of fallback
-
