--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -27,8 +27,8 @@ nlu:
 - intent: ask_course_name
   examples: |
     - วิชานี้คือวิชาอะไรครับ [มธ.100](course_code)
-    - วิชานี้ชื่ออะไร [คพ.245](course_code)
-    - ชื่อเต็มว่าอะไรวิชา [สษ.295](course_code)
+    - วิชา [คพ.245](course_code) ชื่อว่าอะไรคับ
+    - ชื่อเต็มของวิชา [สษ.295](course_code) คือ
     - อะไรคือชื่อเต็มๆของ [จ.252](course_code)
     - วิชานี้ [ศ.210](course_code) มีชื่อว่าอะไร
     - วิชา [ค.211](course_code) มีชื่อวิชาว่าอะไร
@@ -38,6 +38,24 @@ nlu:
     - ฉันอยากรู้ว่าวิชา [คพ.245](course_code) เป็นชื่อของวิชาอะไรหน่ะ
     - ขอถามชื่อของ [คพ.403](course_code)
     - ชื่อของ [คพ.300](course_code)
+    - ชื่อของ [คพ.234](course_code) คืออะไรคับ
+    - วิชานี้ [คพ.241](course_code) คือวิชาอะไรครับ
+    - อธิบายรายละเอียดของวิชานี้ [คพ.262] (course_code)
+    - ฉันอยากรู้จัก [ค.211] (course_code)
+    - ชื่อของ [ทม.201] (course_code)
+    - รหัสวิชา [คพ.386] (course_code) คือชื่ออะไร
+    - [คพ.390] (course_code) คือวิชาอะไร
+    - ช่วยหาชื่อวิชา [คพ.396] (course_code) ให้หน่อย
+    - ขอทราบชื่อวิชา [คพ.397] (course_code) หน่อยครับ
+    - [คพ.403] (course_code) ชื่อไร
+    - ชื่อวิชา [คพ.434] (course_code) คือ
+    - ช่วยดูชื่อวิชา [คพ.435] (course_code) ให้ที
+    - วิชา [พบ.291] (course_code) คืออะไร
+    - ช่วยอธิบาย [คพ.299] (course_code)
+    - [สษ.395] (course_code) ชื่อ
+    - อยากถามว่ารหัสวิชา [คพ.467] (course_code) ชื่อเต็มๆ ว่าอะไรครับ
+    - แนะนำ [วท.301] (course_code) ให้ฉันที
+
 
 - intent: chit_chat_professor
   examples: |
