--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1,2 +1,4 @@
 action_endpoint:
   url: "http://localhost:5055/webhook"
+
+  # url: "https://809c-180-180-142-6.ngrok-free.app/webhooks/line/webhook"
